Fix overflowing 1st col with very long post titles

--- a/src/blocks/recent-roles/style.scss
+++ b/src/blocks/recent-roles/style.scss
@@ -92,7 +92,7 @@
 		margin: 0;
 		padding: 0;
 		display: grid;
-		grid-template-columns: minmax(120px, auto) minmax(80px, auto) 1fr auto;
+		grid-template-columns: minmax(120px, 1fr) minmax(80px, auto) auto auto;
 		column-gap: 0.2rem;
 		align-items: baseline;
 
